Falta arreglar cosas

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,9 @@
             <img src="/static/logo.jpg" alt="Logo" class="responsive-image">
         </div>
         
-        {% block content %}{% endblock %}
+        {% block content %}
+
+        {% endblock %}
     </main>
 
     <footer class="bg-light text-center py-3">
