Iconos del menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,32 @@
                 {% if user.is_authenticated %}
                 <li>
                     <a href="#">
-                        <ion-icon name="alert-circle-outline"></ion-icon>
-                        <span>Prueba1</span>
+                        <ion-icon name="pie-chart-outline"></ion-icon>
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="medkit-outline"></ion-icon>
+                        <span>Inventario</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="cart-outline"></ion-icon>
+                        <span>Ventas</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="stats-chart-outline"></ion-icon>
+                        <span>Informes</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="cash-outline"></ion-icon>
+                        <span>Cierre de Caja</span>
                     </a>
                 </li>
                 {% endif %}
