--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
     <title>Mi Farmacia</title>
     <link rel="icon" href="{% static 'pestaña.jpg' %}" type="image/jpeg">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    
     {% block extra_style %}
+
     {% endblock %}
 </head>
 
@@ -84,7 +86,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="/acerca/">
                             <ion-icon name="information-circle-outline"></ion-icon>
                             <span>Acerca</span>
                         </a>
