--- a/Inventario/templates/lista_productos.html
+++ b/Inventario/templates/lista_productos.html
@@ -24,12 +24,16 @@
                     {% endif %}
                 </td>
                 <td>
-                    <a href="{% url 'editar_producto' producto.id %}" class="btn btn-warning">Editar</a>
-                    <a href="{% url 'eliminar_producto' producto.id %}" class="btn btn-danger">Eliminar</a>
+                    {% if user.is_staff %}  {# Solo los administradores pueden ver estas opciones #}
+                        <a href="{% url 'editar_producto' producto.id %}" class="btn btn-warning">Editar</a>
+                        <a href="{% url 'eliminar_producto' producto.id %}" class="btn btn-danger">Eliminar</a>
+                    {% endif %}
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
-    <a href="{% url 'crear_producto' %}" class="btn btn-success">Crear Producto</a>
+    {% if user.is_staff %}  {# Solo los administradores pueden ver el botón de crear producto #}
+        <a href="{% url 'crear_producto' %}" class="btn btn-success">Crear Producto</a>
+    {% endif %}
 {% endblock %}
