--- a/Inicio/templates/inicio.html
+++ b/Inicio/templates/inicio.html
@@ -1,17 +1,10 @@
 {% extends "base.html" %}
-<!-- Log on to codeastro.com for more projects -->
 {% load static %}
-
-
-{% block title %} Home {% endblock title %}
-
-
+{% block title %} Inicio {% endblock title %}
 {% block content %}
 
-    <div style="color:#464646; font-style: bold; font-size: 3rem; border-bottom: 1px solid #464646;">Welcome, {{ request.user.username }}</div>
+    <div style="color:#464646; font-style: bold; font-size: 3rem; border-bottom: 1px solid #464646;">Bienvenido, {{ request.user.username }}</div>
 
-    <h1>hola</h1>
-    </div>
 
 
 {% endblock content %}
