--- a/Inicio/templates/login.html
+++ b/Inicio/templates/login.html
@@ -7,53 +7,54 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <link rel="stylesheet" href="{% static 'css/main.css' %}">    
-    <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">    
+    <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
+
     <title>Iniciar Sesión</title>
+    <link rel="icon" href="{% static 'pestaña.jpg' %}" type="image/jpg">
 </head>
 
 <body>
-<div class="align-middle" style="color: #607d8b; font-style: bold; font-size: 3rem;">Inventory Management System</div>
-<!-- <div class="align-middle" style="color: #494949;">An Inventory Management System</div> -->
-<br><!-- Log on to codeastro.com for more projects -->
+    <br>
+    <div class="align-middle">
+        <img src="{% static 'logo.jpg' %}" alt="Mi Farmacia" style="width: auto; height: 100px;">
+    </div>
+    <br>
 
-<div class="row d-flex justify-content-center">
-    <div class="col-md-6">
-        {% if user.is_authenticated %}
-            
-            <br><br>
-            <h2 class="align-middle">You are already logged in, {{ request.user.username }}!</h2>
-            <div class="border-top pt-3 align-middle"> <br>
-                <a class="btn ghost-blue" href="{% url 'incio' %}">Go back home</a> <br><br>
-                <a class="btn ghost-red" href="{% url 'logout' %}">Log Out</a>
-            </div>
-        
-        {% else %}
-
-            <div class="content-section">
-                <form method="POST">
-                    {% csrf_token %}
-                    <fieldset class="form-group">
-                        <div class="align-middle" style="color:#494949;"><legend class="border-bottom mb-4">Please login to continue...</legend></div>
-                        {{ form|crispy }}
-                    </fieldset>
-                    <div class="form-group">
-                        <div class="align-middle"> 
-                            <button class="btn btn-outline-success btn-lg" type="submit">Log In</button>         
-                            {# <button class="ml-2 btn btn-danger">Exit</button> #}
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+            {% if user.is_authenticated %}
+                <br><br>
+                <h2 class="align-middle">You are already logged in, {{ request.user.username }}!</h2>
+                <div class="border-top pt-3 align-middle"> <br>
+                    <a class="btn ghost-blue" href="{% url 'incio' %}">Regresar al inicio</a> <br><br>
+                    <a class="btn ghost-red" href="{% url 'logout' %}">Cerrar sesión</a>
+                </div>
+            {% else %}
+                <div class="content-section">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <fieldset class="form-group">
+                            <div class="align-middle" style="color:#494949;"><legend class="border-bottom mb-4">Debe de estar registrado</legend></div>
+                            {{ form|crispy }}
+                        </fieldset>
+                        <div class="form-group">
+                            <div class="align-middle"> 
+                                <button class="btn btn-outline-success btn-lg" type="submit">Iniciar Sesión</button>  
+                            </div>
                         </div>
-                    </div>
-                </form>
-            </div>
-            
+                        <div class="align-middle">
+                            <br>
+                            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kchapal@miumg.edu.gt&su=Recuperación%20de%20Contraseña&body=Por%20favor,%20escriba%20su%20nombre%20y%20número%20de%20teléfono%20aquí." target="_blank" style="color: #494949">
+                                ¿Olvidaste tu contraseña?
+                            </a>  <br><br>
+                        </div>    
+                    </form>
+                </div>
+            {% endif %}
+        </div>
+    </div>
 
-        {% endif %}
-
-    </div><!-- Log on to codeastro.com for more projects -->
-</div>
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
