--- a/Inicio/templates/logout.html
+++ b/Inicio/templates/logout.html
@@ -4,45 +4,33 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/bootstrap.min.css' %}">
-
-    <!-- Main CSS, then Sidebar CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">    
     <link rel="stylesheet" type="text/css" href="{% static 'css/sidebar.css' %}">    
     
-    <title>IMS - Logout</title>
-
+    <title>Sesión Finalizada</title>
+    <link rel="icon" href="{% static 'pestaña.jpg' %}" type="image/jpg">
 </head>
 
 <body>
-
-    <div class="align-middle" style="color: #607d8b; font-style: bold; font-size: 3rem;">Inventory Management System</div>
+    <br>
+    <div class="align-middle">
+        <img src="{% static 'logo.jpg' %}" alt="Mi Farmacia" style="width: auto; height: 100px;">
+    </div>
     <br>
 
     <div class="row d-flex justify-content-center">
         <div class="col-md-6">
-        
-            <h2 class="align-middle" style="color: #494949;">You have been logged out! Thank you for using IMS</h2>
+            <h2 class="align-middle" style="color: #494949;">Ha finalizado la sesión</h2>
             <div class="border-top pt-3 align-middle">
-                <a href="{% url 'login' %}"><button class="ml-2 btn btn-outline-secondary btn-lg">Log In Again</button></a> <br><br>
-                {# <button class="ml-2 ghost-red">Exit</button> #}
+                <a href="{% url 'login' %}"><button class="btn btn-outline-success btn-lg" type="submit">Iniciar Sesión</button></a>
+                <a href="{% url 'acerca' %}"><button class="btn btn-outline-success btn-lg" type="submit">Acerca de</button></a>
             </div>
-    
-            <div class="align-middle"> <a href="{% url 'acerca' %}">About</a> </div>
-
         </div>
     </div>
-
-
-
 </body>
 
 </html>
