--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Tipografía cdn -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <!-- Iconos cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
     <!-- Estilos -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">    
     <link rel="stylesheet" type="text/css" href="{% static 'css/sidebar.css' %}">    
     <link rel="stylesheet" type="text/css" href="{% static 'css/dialogbox.css' %}">    
     <title>{% block title %}Mi Farmacia{% endblock title %}</title>
+    <link rel="icon" href="{% static 'pestaña.jpg' %}" type="image/jpg">
 </head>
 
 <body>
@@ -37,26 +40,35 @@
 
             <ul class="list-unstyled sidebar-components">
                 <li> 
-                    <a class="sidebar-text sidebar-button" href="{% url 'inicio' %}"><i class="fas fa-home"></i> Home</a>
+                    <a class="sidebar-text sidebar-button" href="{% url 'inicio' %}"><i class="bi bi-house-door"></i></i>   Inicio</a>
                 </li>               
                 <li>
-                    <a href="#inventorySubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="fas fa-boxes"></i> Inventory</a>
+                    <a href="#inventarioSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-box-seam"></i>   Inventario</a>
+                    <ul class="collapse list-unstyled" id="inventarioSubmenu">
+                        <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="#"><i class="bi bi-box-arrow-in-up"></i>   Agregar Nuevo</a></li>
+                        <li> <a class="sidebar-text sidebar-subitem sidebar-button" href="#"><i class="bi bi-capsule-pill"></i>   Listado de Productos</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#ventasSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-cart3"></i>   Ventas</a>
                     
                 </li>
                 <li>
-                    <a href="#purchaseSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="fas fa-cash-register"></i> Purchases</a>
+                    <a href="#informesSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-receipt-cutoff"></i>   Informes</a>
                     
                 </li>
                 <li>
-                    <a href="#saleSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="fas fa-dollar-sign"></i> Sales</a>
-                    
-                </li>
-                <li>
-                    <a href="#supplierSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="fas fa-dolly-flatbed"></i> Suppliers</a>
+                    <a href="#cierreSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-cash-stack"></i>   Cierre de caja</a>
                    
                 </li>
+                {% if user.is_staff %}
                 <li>
-                    <a class="sidebar-text sidebar-button" href="{% url 'acerca' %}"><i class="fas fa-info-circle"></i> About</a>
+                    <a href="#usuariosSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-people"></i>   Usuarios</a>
+                   
+                </li>
+                {% endif %}
+                <li>
+                    <a class="sidebar-text sidebar-button" href="{% url 'acerca' %}"><i class="bi bi-info-circle"></i>   Acerca</a>
                 </li> 
 
                 <li class="bottomleft">
@@ -67,16 +79,17 @@
                         {% if request.user.is_superuser %}
                             <li>
                                 <a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'admin:index' %}">
-                                    <i class="fas fa-dot-circle"></i> Admin Page
+                                    <i class="bi bi-person-gear"></i>  Página del administrador
                                 </a>
                             </li>
                         {% endif %}
                         <li>
                             <form method="POST" action="{% url 'logout' %}" class="d-inline">
                                 {% csrf_token %}
-                                <a href="#" class="sidebar-text sidebar-subitem sidebar-button" onclick="this.closest('form').submit();">Log In Again</a>
+                                <a href="#" class="sidebar-text sidebar-subitem sidebar-button" onclick="this.closest('form').submit();"><i class="bi bi-x-circle"></i>  Cerrar Sesión</a>
                             </form>
                         </li>
+
                         
                         
                         
@@ -127,6 +140,5 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
