--- a/Inventario/templates/inventario.html
+++ b/Inventario/templates/inventario.html
@@ -57,7 +57,6 @@
                     <th>Precio</th>
                     <th>Vencimiento</th>
                     <th>Ingreso</th>
-                    <th>Documento</th>
                     <th>Dosis</th>
                     <th>Categoría</th>
                     <th>Acciones</th>
@@ -65,40 +64,70 @@
             </thead>
 
             {% if object_list %}
-                <tbody>
-                    {% for stock in object_list %}
-                        <tr>
-                            <td class="align-middle">
-                                {% if stock.imagen %}
-                                    <img src="{{ stock.imagen.url }}" alt="{{ stock.nombre }}" style="width: 50px; height: auto;">
-                                {% else %}
-                                    Sin imagen
-                                {% endif %}
-                            </td> 
-                            <td class="align-middle">{{ stock.nombre }}</td>
-                            <td class="align-middle">{{ stock.cantidad }}</td>
-                            <td class="align-middle">{{ stock.precio }}</td>
-                            <td class="align-middle">{{ stock.fecha_vencimiento|date:"d/m/Y" }}</td>
-                            <td class="align-middle">{{ stock.fecha_ingreso|date:"d/m/Y" }}</td>
-                            <td class="align-middle">{{ stock.numero_documento }}</td>
-                            <td class="align-middle">{{ stock.dosis }}</td> 
-                            <td class="align-middle">{{ stock.categoria }}</td> 
-                            <td class="align-middle">
-                                <a href="#" class="btn btn-info btn-sm"><i class="bi bi-pencil-square"></i></a>
-                                <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash3"></i></a>
-                            </td>          
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            {% else %}
-                <tbody>
+            <tbody>
+                {% for stock in object_list %}
                     <tr>
-                        <td colspan="8" class="text-center">No hay registros disponibles.</td>
+                        <td class="align-middle">
+                            {% if stock.imagen %}
+                                <img src="{{ stock.imagen.url }}" alt="{{ stock.nombre }}" style="width: auto; height: 70px;">
+                            {% else %}
+                                Sin imagen
+                            {% endif %}
+                        </td> 
+                        <td class="align-middle">{{ stock.nombre }}</td>
+                        <td class="align-middle">{{ stock.cantidad }}</td>
+                        <td class="align-middle">{{ stock.precio }}</td>
+                        <td class="align-middle">
+                            {% for lote in stock.lotes.all %}
+                                <div>
+                                    {{ lote.numero_documento }} | {{ lote.fecha_vencimiento|date:"d/m/Y" }}
+                                </div>
+                            {% empty %}
+                                Sin lotes
+                            {% endfor %}
+                        </td>
+                        <td class="align-middle">
+                            {% for lote in stock.lotes.all %}
+                                <div>
+                                    {{ lote.numero_documento }} | {{ lote.fecha_ingreso|date:"d/m/Y" }}
+                                </div>
+                            {% empty %}
+                                Sin lotes
+                            {% endfor %}
+                        </td>
+                        <td class="align-middle">{{ stock.dosis }}</td> 
+                        <td class="align-middle">{{ stock.categoria }}</td> 
+                        <td class="align-middle">
+                            <a href="#" class="btn btn-info btn-sm"><i class="bi bi-pencil-square"></i></a>
+                            <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash3"></i></a>
+                        </td>          
                     </tr>
-                </tbody>
+                {% endfor %}
+            </tbody>            
             {% endif %}
         </table>  
-    </div> <!-- Fin del contenedor para la tabla -->
+    </div> 
+
+    <!-- Modal -->
+    <div class="modal fade" id="loteModal" tabindex="-1" role="dialog" aria-labelledby="loteModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loteModalLabel">Detalles del Lote</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="loteModalBody">
+                    <!-- Aquí se cargará la información del lote -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 {% endblock content %}
 
