--- a/Inventario/templates/cargar_productos.html
+++ b/Inventario/templates/cargar_productos.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Cargar Productos Anualmente {% endblock %}
+{% block title %} Cargar Productos {% endblock %}
 
 {% block content %}
 <div style="color:#575757; font-weight: bold; font-size: 3rem; border-bottom: 1px solid white;">Cargar Manual de Productos</div>
