--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                         <i class="bi bi-box-seam"></i> Inventario
                     </a>
                     <ul class="collapse list-unstyled" id="inventarioSubmenu">
-                        <li><a class="sidebar-text sidebar-subitem sidebar-button" href="#"><i class="bi bi-box-arrow-in-up"></i> Cargar stock</a></li>
+                        <li><a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'cargar-productos' %}"><i class="bi bi-box-arrow-in-up"></i> Cargar stock</a></li>
                         <li><a class="sidebar-text sidebar-subitem sidebar-button" href="{% url 'inventario' %}"><i class="bi bi-capsule-pill"></i> Listado de Productos</a></li>
                     </ul>
                 </li>
