--- a/Inventario/templates/inventario.html
+++ b/Inventario/templates/inventario.html
@@ -46,7 +46,6 @@
 
     <br>
     
-    <!-- Contenedor para la tabla que permite desplazamiento horizontal -->
     <div class="table-responsive">
         <table class="table table-css table-bordered table-hover">
             <thead class="thead-dark align-middle">
@@ -55,10 +54,6 @@
                     <th>Nombre</th>
                     <th>Cantidad</th>
                     <th>Precio</th>
-                    <th>Vencimiento</th>
-                    <th>Ingreso</th>
-                    <th>Dosis</th>
-                    <th>Categoría</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -77,30 +72,54 @@
                         <td class="align-middle">{{ stock.nombre }}</td>
                         <td class="align-middle">{{ stock.cantidad }}</td>
                         <td class="align-middle">{{ stock.precio }}</td>
+
+                        <!-- Columna de Acciones -->
                         <td class="align-middle">
-                            {% for lote in stock.lotes.all %}
-                                <div>
-                                    {{ lote.numero_documento }} | {{ lote.fecha_vencimiento|date:"d/m/Y" }}
+                            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#lotesModal{{ stock.id }}">
+                                <i class="bi bi-file-text"></i>
+                            </button>
+                            
+                            <!-- Modal -->
+                            <div class="modal fade" id="lotesModal{{ stock.id }}" tabindex="-1" aria-labelledby="lotesModalLabel{{ stock.id }}" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="lotesModalLabel{{ stock.id }}">Lotes de {{ stock.nombre }}</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <table class="table">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Documento</th>
+                                                        <th>Vencimiento</th>
+                                                        <th>Ingreso</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for lote in stock.lotes.all %}
+                                                        <tr>
+                                                            <td>{{ lote.numero_documento }}</td>
+                                                            <td>{{ lote.fecha_vencimiento|date:"d/m/Y" }}</td>
+                                                            <td>{{ lote.fecha_ingreso|date:"d/m/Y" }}</td>
+                                                        </tr>
+                                                    {% empty %}
+                                                        <tr>
+                                                            <td colspan="3">Sin lotes</td>
+                                                        </tr>
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                        </div>
+                                    </div>
                                 </div>
-                            {% empty %}
-                                Sin lotes
-                            {% endfor %}
-                        </td>
-                        <td class="align-middle">
-                            {% for lote in stock.lotes.all %}
-                                <div>
-                                    {{ lote.numero_documento }} | {{ lote.fecha_ingreso|date:"d/m/Y" }}
-                                </div>
-                            {% empty %}
-                                Sin lotes
-                            {% endfor %}
-                        </td>
-                        <td class="align-middle">{{ stock.dosis }}</td> 
-                        <td class="align-middle">{{ stock.categoria }}</td> 
-                        <td class="align-middle">
+                            </div>
                             <a href="#" class="btn btn-info btn-sm"><i class="bi bi-pencil-square"></i></a>
                             <a href="#" class="btn btn-danger btn-sm"><i class="bi bi-trash3"></i></a>
-                        </td>          
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>            
@@ -108,26 +127,4 @@
         </table>  
     </div> 
 
-    <!-- Modal -->
-    <div class="modal fade" id="loteModal" tabindex="-1" role="dialog" aria-labelledby="loteModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="loteModalLabel">Detalles del Lote</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body" id="loteModalBody">
-                    <!-- Aquí se cargará la información del lote -->
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 {% endblock content %}
-
