--- a/Ventas/templates/nueva_factura.html
+++ b/Ventas/templates/nueva_factura.html
@@ -16,40 +16,37 @@
 
         <div class="panel-heading panel-heading-text">Detalles del Cliente</div>
         <div class="panel-body">
-            
-            {{ form.name.errors }}
-            {{ form.phone.errors }}
-            {{ form.email.errors }}
-            {{ form.address.errors }}
-            {{ form.gstin.errors }}
-
-            <div class="form-group">
-                <label for="{{ form.name.id_for_label }}" class="panel-body-text">Nombre del Cliente:</label>
-                {{ form.name }}                
-            </div>
-
+        
+            <!-- Mostrar errores para cada campo -->
+            {{ form.nombre.errors }}
+            {{ form.telefono.errors }}
+            {{ form.correo_electronico.errors }}
+            {{ form.direccion.errors }}
+            {{ form.nit.errors }}
+        
             <div class="form-row">
-                <div class="form-group col-md-6"> 
-                    <label for="{{ form.phone.id_for_label }}" class="panel-body-text">Teléfono:</label>
-                    {{ form.phone }}
-                </div>
-                <div class="form-group col-md-6">              
-                    <label for="{{ form.email.id_for_label }}" class="panel-body-text">Correo Electrónico:</label>
-                    {{ form.email }}
-                </div>
+                <label for="{{ form.nombre.id_for_label }}" class="panel-body-text">Nombre del Cliente:</label>
+                {{ form.nombre }}                
             </div>
-
-            <div class="form-group">
-                <label for="{{ form.address.id_for_label }}" class="panel-body-text">Dirección:</label>
-                {{ form.address }}
+            <div class="form-row">
+                    <label for="{{ form.telefono.id_for_label }}" class="panel-body-text">Teléfono:</label>
+                    {{ form.telefono }}
             </div>
-            <div class="form-group">
-                <label for="{{ form.gstin.id_for_label }}" class="panel-body-text">Número GSTIN:</label>
-                {{ form.gstin }}
+            <div class="form-row">              
+                    <label for="{{ form.correo_electronico.id_for_label }}" class="panel-body-text">Correo Electrónico:</label>
+                    {{ form.correo_electronico }}
             </div>
-
+        
+            <div class="form-row">
+                <label for="{{ form.direccion.id_for_label }}" class="panel-body-text">Dirección:</label>
+                {{ form.direccion }}  
+            </div>
+            
+            <div class="form-row">
+                <label for="{{ form.nit.id_for_label }}" class="panel-body-text">NIT:</label>
+                {{ form.nit }}  
+            </div>
         </div>
-
         <br>
 
         <div class="panel panel-default">
@@ -64,11 +61,11 @@
                     <div class="row form-row">
                         <div class="form-group col-md-6">
                             {{ iform.stock.errors }}
-                            <label class="panel-body-text">Stock:</label>
+                            <label class="panel-body-text">Producto:</label>
                             {{ iform.stock }}
                         </div>
                         <div class="form-group col-md-2">
-                            <label class="panel-body-text">Precio por artículo:</label>
+                            <label class="panel-body-text">Precio:</label>
                             <input type="text" class="textinput form-control" name="{{ iform.perprice.name }}" value="{{ iform.perprice.value }}" readonly>
                         </div>
                         <div class="form-group col-md-2">
